# Kompiler

./: .gitignore  Cargo.toml  LICENSE  README.md  cconfiguration.json  deny.toml
.github/workflows/: ci.yml
examples/: configuration_template.json
examples/rules/: auth_bypass.yml  net_bruteforce.yml  single_auth_bypass.yml
src/: configuration.rs  errors.rs  lib.rs  main.rs  quickwit.rs  rules.rs  telemetry.rs
src/rules/: condition.rs  filter.rs  matcher.rs  parser.rs  tests.rs
src/rules/tests/: condition.rs  filter.rs  matcher.rs  parser_tests.rs  rules.rs
tests/fixtures/filters/: process_filter.yaml
tests/fixtures/matchers/: threshold_no_groups.yaml  threshold_with_groups.yaml
tests/fixtures/rules/: invalid_undefined_condition.yaml  valid_rule.yaml
