[package]
name = "korelator"
version = "0.1.0"
edition = "2024"
description = "Temporal event correlation engine for security events"
license = "AGPL-3.0-or-later"
repository = ""

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
# HTTP Client
reqwest = { version = "0.13", features = ["json"] }
# Loging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
# Error management
thiserror = "2.0.18"
