[package]
name = "kompiler"
version = "0.1.0"
edition = "2024"

description = "Rule parser"
license = "AGPL-3.0-or-later"
license-file = "LICENSE"
readme = "README.md"

repository = "https://github.com/komrad-company/Kompiler"

[dependencies]
# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
# Error management
thiserror = "2.0.18"

khronika = { git = "https://github.com/komrad-company/Khronika.git", tag = "v1.0.1" } # Our job komrad
